<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">


    <Button
        android:id="@+id/taskButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_1_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/taskButton2"/>

    <Button
        android:id="@+id/taskButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_2_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taskButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskButton1" />

    <Button
        android:id="@+id/taskButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_3_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/scoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskButton2"/>

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="wrap_content"
        android:text="@string/score_activity_name"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskButton3"/>

</androidx.constraintlayout.widget.ConstraintLayout>