<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:textSize="24sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40">

            <ImageView
                android:id="@+id/smiling_face_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/smiling_face_icon_description"
                android:src="@drawable/smiling_face_better" />
        </FrameLayout>

        <ListView
            android:id="@+id/list_view_for_sequences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_for_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/edit_text"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_string"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/change_label_colour"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColorHint="#757575" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/hide_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_list_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/show_toast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toast_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <!--android.widget.Button
                android:id="@+id/rounded_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/rounded_button"
                android:text="@string/round_button_text"
                android:textColor="@color/black" /-->

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:clickable="true"
                android:contentDescription="@string/fab_return"
                android:focusable="true"
                app:backgroundTint="@color/ferrari_red" />
        </LinearLayout>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>